fixing white space

--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,6 @@ body {
 {
     max-width: 40%;
     margin: 0 auto;
-    height: 100%;
 
 
 }
@@ -223,6 +222,7 @@ body {
   right: 40%;
   border: 3px solid #f1f1f1;
   z-index: 9;
+  background-color: rgb(255, 255, 255);
 }
 .form-popup-button-list {
   display: none;
@@ -234,11 +234,13 @@ body {
   border: 3px solid #f1f1f1;
   z-index: 9;
   overflow: auto;
+  background-color: rgb(255, 255, 255);
 }
 
 /* Add styles to the form container */
 .form-container-radio {
   width: 250px;
+  height: 50%;
   padding: 10px;
   background-color: rgb(255, 255, 255);
 }
@@ -257,7 +259,7 @@ body {
   border: none;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  margin-bottom: 10px;
   opacity: 0.8;
 }
 /* Set a style for the submit button */
